--- a/src/templates/catalog/product_form.html
+++ b/src/templates/catalog/product_form.html
@@ -19,6 +19,7 @@
 
       <form method="post" class="mt-md" style="margin-top:0;">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next_url }}">
 
         {% if form.non_field_errors %}
           <div class="error">{{ form.non_field_errors }}</div>
@@ -33,6 +34,7 @@
           <a class="btn btn-ghost" href="{{ back_url }}">Cancelar</a>
         </div>
       </form>
+
     </div>
   </div>
 </div>
